--- a/src/assets/Components/MobileNav/mobilenav.css
+++ b/src/assets/Components/MobileNav/mobilenav.css
@@ -38,6 +38,13 @@
     margin-left: -2rem;
 }
 
+/* .menu-item{
+    display: flex;
+    padding-top: 2.5rem;
+    font-size: 16px;
+} */
+
+
 @media (max-width: 769px){
 .mobile-menu{
     display: block;
@@ -52,6 +59,7 @@
 @media (max-width: 320px) {
    
 }
+
 
 
 
